--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
