--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "autoprefixer": "10.4.15",
+    "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -56,13 +57,13 @@
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
